bug fixed
comment out css
fix combine avg data bug
remove scrollbar

--- a/TestResults/mysite/mysite/static/style.css
+++ b/TestResults/mysite/mysite/static/style.css
@@ -45,12 +45,12 @@ div.content_failure {
 	overflow: auto;
 	overflow-x: hidden;
 	margin:3px;
-    height:70px;
+    /*height:70px;*/
 }
 
 tr.content_column td.column div.column {
 	width:150px;
-    height:70px;
+    /*height:70px;*/
     text-align: center;
     overflow: auto;
 	overflow-x: hidden;
